<resources>
    <string name="app_name">A3g HHID </string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="application_name">A3g HHID </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="q21_tv">What is your current religion, if any?</string>
    <string name="connection_error_message_title">Connection Error</string>
    <string name="connection_error_message">Please check your Internet Connection</string>
    <string name="registration_screen_alert_box_btn">ok</string>
    <string name="sync_now">Sync Now</string>
    <string name="Already_synced">No Data to Sync</string>
    <string name="sdcard_exported_text">Sdcard exported : Syncing to server is commented</string>
    <string name="conenctivity_issue">Internet Connectivity Issue</string>
    <string name="invalid_user_name_error_message_via_errorcode">Enter an email address that is registered with us.</string>
    <string name="invalid_user_name_error_message_title_via_errorcode">Invalid User </string>
    <string name="invalid_password_error_message">Please provide a correct password :</string>
    <string name="invalid_password_error_message_via_server_code">Incorrect password, please try again</string>
    <string name="cp_invalid_password_error_message_via_server_code">Incorrect code, please try again</string>
    <string name="invalid_password_error_message_title_via_server_code">Incorrect Password</string>
    <string name="advance_option_screen_alert_box_btn">Ok</string>
    <string name="invalid_mapping_id_error_message">Invalid Mapping Id.</string>
    <string name="socket_exception_error_message">Please make sure you are connected to internet and try again. </string>
    <string name="demo_license_already_consumed_error_message">Demo license already consumed on this device.</string>
    <string name="license_not_activated_error_message">Your license is not active. Please contact technical support.</string>
    <string name="license_not_activated_error_message_title">Inactive License</string>
    <string name="device_already_registered_error_message">A device with this name is already registered. Enter a different device name.</string>
    <string name="device_already_registered_error_message_title">Device Already Registered</string>
    <string name="general_error_message">Your request could not be processed at this time. Please try again. If the problem persists, contact technical support.</string>
    <string name="general_error_message_title">Server Error</string>
    <string name="OK">OK</string>
    <string name="psu_code">PSU Code</string>
    <string name="vil_code">Village Code</string>
    <string name="password">Password</string>
    <string name="village_select">Select Village</string>
    <string name="sign_up_screen_top_bar_text_view">Add New Record</string>
    <string name="sign_up_screen_top_bar_text_view_sign_in">Sign In</string>
    <string name="screen_three_top_bar"> Village_id: %1$s  \t HHID:\u0020  %2$s \n\tHHID :\u0020 %3$s</string>
    <string name="screen_two_top_bar">Head Name: %1$s   \nHHID :\u0020 %2$s  \t HHID  :\u0020  %3$s</string>
    <string name="sign_up_first_name_textfield_label">Full Name</string>
    <string name="hhid_hours_hint">Hours ( 0 se 24 )</string>
    <string name="hhid_mins_hint">Minutes ( 0 se 59 )</string>
    <string name="sign_up_first_name_textfield_hint">Full Name (e.g. John Smith)</string>
    <string name="sign_up_last_name_textfield_label">Last Name</string>
    <string name="sign_up_email_name_textfield_label">Your Email</string>
    <string name="sign_up_confirm_email_name_textfield_label">Re-Type Email</string>
    <string name="sign_up_email_name_textfield_hint">email@example.com</string>
    <string name="sign_up_password_textfield_label">Password</string>
    <string name="sign_up_confirm_password_textfield_label">Re-Type Password</string>
    <string name="sign_up_button_textview_label">Next</string>
    <string name="sign_up_button_textview_label_login">Login</string>
    <string name="relative_layout_new_stid_btn">Next HHID in  New Structure</string>
    <string name="relative_layout_new_stid_btnthreenextbtn">Next</string>
    <string name="hhid_q_13_next">Next  </string>
    <string name="hhid_q_13_next_and_savebutton">Next HHID in  Same Structure </string>
    <string name="hhid_q_13_exit_and_savebutton">Save And Exit</string>
    <string name="add_number_text">Add Phone Number</string>
    <string name="add_child_text">Add child</string>
    <string name="add_new_slot">Add New Time Slot</string>
    <string name="relative_layout_new_hh_in_same_stid_btn">Exit</string>
    <string name="sign_up_eula_btn_label_below_btn_line_one">Already have an account? </string>
    <string name="sign_up_eula_btn_label_below_btn_line_two"><![CDATA[  Already have an account? <font color="#3366BB"> <b>Sign in now </b></font>]]></string>
    <string name="sign_in_eula_btn_label_below_btn_line_two"><![CDATA[  Don\'t have an account? <font color="#3366BB"> <b>Sign up now </b></font>]]></string>
    <string name="sign_in_eula_btn_label_below_btn_line_two_analytics"> Don\'t have an account? </string>
    <string name="sign_up_eula_textview_label_line_one">By signing up, you are agreeing to our</string>
    <string name="sign_up_eula_textview_label_line_two"><![CDATA[<font > <u><b>Terms of Use &</b></u></font> <font ><u> <b>Privacy Policy </b></u></font>]]></string>
    <string name="psu_area_name">PSU (Area) Name</string>
    <string name="village_name">Village (Area) Name</string>
    <string name="psu_code_digit">(X digits)</string>
    <string name="app_name_alredy_registered">Already Registered</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="wrong_password_attemp_message">Please enter a valid message!</string>
    <string name="Splash_screen">Splash Screen</string>
    <string name="mainactivity_passwordtextfiled_label">Please Enter Password</string>
    <string name="mainactivity_login_button_label">Log-in</string>
    <string name="mainactivity_signup_button_label">Sign-up</string>
    <string name="signup_activity_emailaddress_editfield_label">Please Enter Email Address</string>
    <string name="signup_activity_username_editfield_label">Desired User Name</string>
    <string name="signup_activity_password_editfield_label">Password</string>
    <string name="signup_activity_password_confirmation_editfield_label">Confirm Password</string>
    <string name="signup_activity_submit_btn_label">Submit</string>
    <string name="login_success_message">Logged-in Successfully</string>
    <string name="login_invalid_user_message">User name does not exist.</string>
    <string name="signup_success_message">Registered Successfully: </string>
    <string name="signup_parameters_missing_message">Required Parameters are missing</string>
    <string name="passwordactivity_passwordtextfiled_label">Please Enter Admin Password</string>
    <string name="passwordactivity_admin_button_label">Admin</string>
    <string name="device_admin_label"> SecureTeen</string>
    <string name="sample_device_admin_summary">Demonstration of a DeviceAdmin
        class for administering the user\'s device.</string>
    <string name="enable_admin">Enable Admin</string>
    <string name="disable_admin">Disable Admin</string>
    <string name="custom_message_on_admin_disable_request">This will deactivate your admin security!</string>
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">From GCM: device successfully registered!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">From GCM: you got message!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="registration_screen_serial_key_text_view">Please Enter Serial Number</string>
    <string name="registration_screen_btn_title">Register Phone</string>
    <string name="registration_screen_progress_bar_title">CellGuard</string>
    <string name="registration_screen_progress_bar_body">Creating new user</string>
    <string name="registration_screen_result_dialog_btn_text">Ok</string>
    <string name="registration_screen_alert_box_title">CellGuard</string>
    <string name="registration_screen_alert_box_cancel_btn">Cancel</string>
    <string name="registration_screen_result_dialog_box_title">CellGuard</string>
    <string name="registration_screen_empty_serial_key_field">Please check your email and enter proper serial number</string>
    <string name="registration_screen_success_message">Your Phone has been registered. Please Login to dashboard account to apply settings</string>
    <string name="registration_screen_error_eight">Please make sure internet is available on phone and retry again after restarting phone</string>
    <string name="registration_screen_error_seven">Please make sure internet is available on phone and retry again after restarting phone</string>
    <string name="registration_screen_error_six">Please make sure internet is available on phone and retry again after restarting phone</string>
    <string name="registration_screen_error_five">Please make sure internet is available on phone and retry again after restarting phone</string>
    <string name="registration_screen_error_four">Please make sure internet is available on phone and retry again after restarting phone</string>
    <string name="registration_screen_error_three">Please make sure internet is available on phone and retry again after restarting phone</string>
    <string name="registration_screen_error_two">Please make sure internet is available on phone and retry again after restarting phone</string>
    <string name="registration_screen_error_invalid_key_part_1">You entered </string>
    <string name="registration_screen_error_invalid_key_part_2">as serial number which is wrong. Please check your email and enter proper serial number</string>
    <string name="registration_screen_error_imei_already_exsist">You have a phone already registered. Please deactivate the already registered phone to register new phone</string>
    <string name="registration_screen_error_one">Please make sure internet is available on phone and retry again after restarting phone</string>
    <string name="sub_user_already_exsist_message">User Already Exsist</string>
    <string name="device_mapping_progress_bar_title">CareTeen</string>
    <string name="sign_in_email_textfield_label">Email</string>
    <string name="sign_in_email_textfield_hint">Email</string>
    <string name="sign_in_password_textfield_label">Password</string>
    <string name="sign_in_password_textfield_hint">Password</string>
    <string name="sign_in_screen_top_bar_text_view">SecureTeen Sign in</string>
    <string name="sign_in_button_textview_label">Login</string>
    <string name="sign_in_forgot_password_label">Forgot your password?\u0020</string>
</resources>